made style improvements

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Wildscapes</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
+		<link rel="stylesheet" href="assets/css/main.css"/>
+		<script src="https://kit.fontawesome.com/c70c69bd1d.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" class="alt">
+				<!-- <header id="header" class="alt">
 					<h1><a href="index.html">wildscapes</a></h1>
-					<!-- <nav id="nav">
+					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
@@ -39,8 +40,8 @@
 							</li>
 							<li><a href="#" class="button">Contact Us</a></li>
 						</ul>
-					</nav> -->
-				</header>
+					</nav>
+				</header> -->
 
 			<!-- Banner -->
 				<section id="banner">
@@ -57,7 +58,7 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Let us transform your outdoor space<br>into an oasis of vibrant, native plant life.</h2>
+							<h2>Transform your outdoor space into an oasis of vibrant, native plant life.</h2>
 							<p>Wildscapes is a family-owned xeriscaping business, passionate about turning high-maintenance, water-intensive yards into gorgeous natural landscapes that are better for the planet and better for the pocketbook.</p>
 						</header>
 						<span class="image featured"><img src="images/xeriscaping.jpg" alt="" /></span>
@@ -91,29 +92,24 @@
 						</div>
 					</section>
 
-					<section>
+					<section class="box">
 						<h2>We love our customers!</h2>
 						<div class="row">
-
-							<div class="col-6 col-12-narrower">
-
-								<section class="box special">
+							<div class="col-6 col-12-mobile">
+								<section class="box special testimonials">
 									<span class="image featured"><img src="images/bee.jpg" alt="" /></span>
-									<p class = "testimonial">"Converting my lawn to a native plant garden with Wildscapes was the best decision I've ever made as a homeowner. It's my favorite space on the property now - absolutely gorgeous and brimming with life!"</p>
+									<p class="quote">"Converting my lawn to a native plant garden with Wildscapes was the best decision I've ever made as a homeowner. It's my favorite space on the property now - absolutely gorgeous and brimming with life!"</p>
 									<span class="customer">-Jada Miller</span>
-									<span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"></span>
+									<span class="icon solid fa-solid fa-star stars"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"></span>
 								</section>
-
 							</div>
-							<div class="col-6 col-12-narrower">
-
-								<section class="box special">
+							<div class="col-6 col-12-mobile">
+								<section class="box special testimonials">
 									<span class="image featured"><img src="images/flower.jpg" alt="" /></span>
-									<p class = "testimonial">"Working with Wildscapes to give our yard a makeover was a dream. We only regret not doing it years earlier! Xeriscaping has saved us so much much time and money, and everyone compliments our garden!"</p>
+									<p class="quote">"Working with Wildscapes to give our yard a makeover was a dream. We only regret not doing it years earlier! Xeriscaping has saved us so much much time and money, and everyone compliments our garden!"</p>
 									<span class ="customer">-Robert Parker</span>
-									<span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"></span>
+									<span class="icon solid fa-solid fa-star stars"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"></span>
 								</section>
-
 							</div>
 						</div>
 					</section>
@@ -123,7 +119,7 @@
 			<!-- Contact -->
 				<section id="contact">
 
-					<h2>Ready to bid your lawn farewell?</h2>
+					<h2>Want to bid your lawn farewell?</h2>
 					<p>We can't wait to help. Reach out today for a free quote.</p>
 					<ul class="actions special">
 						<li><a href="contact.html" class="button">Get started</a></li>
@@ -134,9 +130,9 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://twitter.com/wildscapesco" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/wildscapesco" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/wildscapesco/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/wildscapesco" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://twitter.com/wildscapesco" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Wildscapes. All rights reserved.</li>
