--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,21 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Wild Yard Design</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
+		<link rel="stylesheet" href="assets/css/main.css"/>
+		<script src="https://kit.fontawesome.com/c70c69bd1d.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
+				<!-- <header id="header" class="alt">
 					<h1><a href="index.html">wildscapes</a></h1>
-					<!-- <nav id="nav">
+					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
@@ -39,8 +40,8 @@
 							</li>
 							<li><a href="#" class="button">Contact Us</a></li>
 						</ul>
-					</nav> -->
-				</header>
+					</nav>
+				</header> -->
 
 			<!-- Main -->
 				<section id="main" class="container medium">
@@ -76,9 +77,9 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://twitter.com/wildscapesco" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/wildscapesco" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/wildscapesco/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/wildscapesco" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://twitter.com/wildscapesco" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Wildscapes. All rights reserved.</li>
