optimized for mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
 		<link rel="stylesheet" href="assets/css/main.css"/>
-		<script src="https://kit.fontawesome.com/c70c69bd1d.js" crossorigin="anonymous"></script>
+		<script defer src="https://kit.fontawesome.com/c70c69bd1d.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
@@ -61,7 +61,7 @@
 							<h2>Transform your outdoor space into an oasis of vibrant, native plant life.</h2>
 							<p>Wildscapes is a family-owned xeriscaping business, passionate about turning high-maintenance, water-intensive yards into gorgeous natural landscapes that are better for the planet and better for the pocketbook.</p>
 						</header>
-						<span class="image featured"><img src="images/xeriscaping.jpg" alt="" /></span>
+						<span class="image featured"><img srcset="images/xeriscaping-small.jpg 400w, images/xeriscaping-medium.jpg 800w, images/xeriscaping-large.jpg 1200w" src="images/xeriscaping-medium.jpg" alt="A yard filled with native plants and flowers" loading="lazy"/></span>
 					</section>
 
 					<section class="box special features">
@@ -97,7 +97,7 @@
 						<div class="row">
 							<div class="col-6 col-12-mobile">
 								<section class="box special testimonials">
-									<span class="image featured"><img src="images/bee.jpg" alt="" /></span>
+									<span class="image featured"><img srcset="images/bee-small.jpg 500w, images/bee.jpg 1024w" src="images/bee.jpg" alt="A pollinating insect landing on a pink flower" loading="lazy"/></span>
 									<p class="quote">"Converting my lawn to a native plant garden with Wildscapes was the best decision I've ever made as a homeowner. It's my favorite space on the property now - absolutely gorgeous and brimming with life!"</p>
 									<span class="customer">-Jada Miller</span>
 									<span class="icon solid fa-solid fa-star stars"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"></span>
@@ -105,7 +105,7 @@
 							</div>
 							<div class="col-6 col-12-mobile">
 								<section class="box special testimonials">
-									<span class="image featured"><img src="images/flower.jpg" alt="" /></span>
+									<span class="image featured"><img srcset="images/flower-small.jpg 500w, images/flower.jpg 1024w" src="images/flower.jpg" alt="Yellow and purple flowers growing outdoors" loading="lazy"/></span>
 									<p class="quote">"Working with Wildscapes to give our yard a makeover was a dream. We only regret not doing it years earlier! Xeriscaping has saved us so much much time and money, and everyone compliments our garden!"</p>
 									<span class ="customer">-Robert Parker</span>
 									<span class="icon solid fa-solid fa-star stars"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"><span class="icon solid fa-solid fa-star"></span>
