--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css"/>
-		<script src="https://kit.fontawesome.com/c70c69bd1d.js" crossorigin="anonymous"></script>
+		<script defer src="https://kit.fontawesome.com/c70c69bd1d.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
