updated footer link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Wildscapes. All rights reserved.</li>
-						<li>Made by: <a href="https://ashleighcodes.netlify.app/">Ashleigh Halverstadt</a></li>
+						<li>Made by: <a href="https://www.ashleighcodes.com/">Ashleigh Halverstadt</a></li>
 						<li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
