initial optimizations for performance, accessibility, and seo

--- a/index.html
+++ b/index.html
@@ -1,47 +1,18 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html lang="en">
+
 	<head>
 		<title>Wildscapes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
+		<meta name="description" content="Wildscapes, a family-owned xeriscaping company in Denver, Colorado.">
 		<link rel="stylesheet" href="assets/css/main.css"/>
 		<script defer src="https://kit.fontawesome.com/c70c69bd1d.js" crossorigin="anonymous"></script>
 	</head>
+
 	<body class="landing is-preload">
 		<div id="page-wrapper">
-
-			<!-- Header -->
-				<!-- <header id="header" class="alt">
-					<h1><a href="index.html">wildscapes</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Contact Us</a></li>
-						</ul>
-					</nav>
-				</header> -->
 
 			<!-- Banner -->
 				<section id="banner">
@@ -130,14 +101,14 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://www.instagram.com/wildscapesco/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.facebook.com/wildscapesco" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://twitter.com/wildscapesco" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/wildscapesco/" class="icon brands fa-instagram"><span class="visually-hidden">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/wildscapesco" class="icon brands fa-facebook-f"><span class="visually-hidden">Facebook</span></a></li>
+						<li><a href="https://twitter.com/wildscapesco" class="icon brands fa-twitter"><span class="visually-hidden">Twitter</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Wildscapes. All rights reserved.</li>
-						<li>Made by: <a href="https://www.ashleighcodes.com/">Ashleigh Halverstadt</a></li>
-						<li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Built by: <a href="https://www.ashleighcodes.com/">Ashleigh Halverstadt</a></li>
+						<li>Design by: HTML5 UP</li>
 					</ul>
 				</footer>
 
@@ -153,4 +124,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
