--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<li><a href="https://twitter.com/wildscapesco" class="icon brands fa-twitter"><span class="visually-hidden">Twitter</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Wildscapes. All rights reserved.</li>
+						<li>&copy; Wildscapes</li>
 						<li>Built by: <a href="https://www.ashleighcodes.com/">Ashleigh Halverstadt</a></li>
 						<li>Design by: HTML5 UP</li>
 					</ul>
